--- a/app/views/history/e_tender.phtml
+++ b/app/views/history/e_tender.phtml
@@ -1,12 +1,12 @@
-<li class="timeline-item right"  data-category="tender" data-type="add">
-    <div class="timeline-content timeline-type" style="padding: 10px 10px 10px 10px; border-left: 1px solid #4285f4;">
+<li class="timeline-item right" data-category="tender" data-type="edit">
+    <div class="timeline-content timeline-type" style="padding: 10px 10px 10px 10px; border-left: 1px solid #fbbc05;">
         <div class="timeline-avatar">
             <img src="public/profile/<?= $this->userDetailHelper($history['id_user'])['image'] ?>" alt="Avatar" class="circle">
         </div>
         <div class="timeline-header">
             <span class="timeline-autor"><?= $this->userDetailHelper($history['id_user'])['nama'] ?></span>
-            <p class="timeline-activity" >
-                Menambahkan Berita Tender
+            <p class="timeline-activity">
+                Mengubah Berita Tender
                 <a href="<?= $this->pathFor('beritaTender_detail', ['id_tender'=>$history['id_tender']]) ?>">
                     <?= $history['detail']['judul_tender'] ?>
                 </a>
