--- a/app/views/sidebar.phtml
+++ b/app/views/sidebar.phtml
@@ -4,6 +4,7 @@
             <ul role="tablist" class="nav nav-tabs nav-justified">
                 <li role="presentation" class="active"><a href="#tab-notifikasi" aria-controls="tab-notifikasi" role="tab" data-toggle="tab">Notifikasi</a></li>
                 <li role="presentation"><a href="#tab-history" aria-controls="tab-history" role="tab" data-toggle="tab">History</a></li>
+                <li role="presentation"><a href="#tab-coba" aria-controls="tab-coba" role="tab" data-toggle="tab">History</a></li>
             </ul>
         </div>
         <div class="tab-panel">
@@ -38,11 +39,11 @@
                     </div>
                 </div>
                 <div id="tab-history" role="tabpanel" class="tab-pane tab-todo">
-                    <div class="todo-container be-notifications">
-                        <div class="list">
+                    <div class="todo-container">
+                        <div class="todo-wrapper">
                             <div class="be-scroller">
-                                <div class="content">
-                                    <ul>
+                                <div class="todo-content be-notifications" style="padding: 0px !important;">
+                                    <ul style="padding: 0px !important; line-height: 0px !important;">
                                         <?php foreach ($histories as $history): ?>
                                             <?php if($history['perubahan'] == 'i_tender'): ?>
                                                 <li class="notification">
@@ -77,7 +78,50 @@
                             </div>
                         </div>
                     </div>
+<!--                    <div class="todo-container be-notifications todo-container">-->
+<!--                        <div class="todo-wrapper">-->
+<!--                            <div class="be-scroller">-->
+<!--                                <div class="content">-->
+<!---->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
+                </div>
+                <div id="tab-coba" role="tabpanel" class="tab-pane tab-todo">
+                    <div class="todo-container" id="history-list">
+                        <div class="bottom-input">
+                            <input type="text" placeholder="Cari History" class="history-search" style="border-bottom: 1px solid #d5d8de">
+                            <span class="mdi mdi-close clear hidden"></span>
+                        </div>
+                        <div class="bottom-input filter-list">
+
+                        </div>
+                        <div class="todo-wrapper">
+                            <div class="be-scroller">
+                                <div class="todo-content" style="padding: 0px !important;">
+                                    <ul class="timeline timeline-variant timeline-sidebar list">
+                                        <?php $my_divider = '' ?>
+                                        <?php foreach ($histories as $history): ?>
+                                            <?php if($this->indMonthYear($history['waktu']) <> $my_divider): ?>
+                                                <?php $my_divider = $this->indMonthYear($history['waktu']) ?>
+                                                <li class="timeline-month"><span><?= $my_divider ?></span></li>
+                                            <?php endif; ?>
+                                                <?php switch($history['perubahan']):
+                                                case 'i_tender': ?>
+                                                    <?= $this->insert('history/i_tender', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'e_tender': ?>
+                                                    <?= $this->insert('history/e_tender', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php endswitch; ?>
+                                        <?php endforeach; ?>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
