--- a/app/views/login2.phtml
+++ b/app/views/login2.phtml
@@ -39,11 +39,11 @@
                                 <thead>
                                     <tr>
                                         <th></th>
-                                        <th width="30%">Judul</th>
+                                        <th width="45%">Judul</th>
                                         <th width="15%">Penyelenggara / Wilayah</th>
-                                        <th width="10%">Tanggal Mulai</th>
-                                        <th width="10%">Tanggal Selesai</th>
-                                        <th width="35%" class="actions"></th>
+                                        <th width="12%">Tanggal Mulai</th>
+                                        <th width="12%">Tanggal Selesai</th>
+                                        <th width="12%" class="actions"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -72,8 +72,14 @@
                                             <td data-filter="<?= strtotime($tender['tgl_selesai']) ?>" data-search="<?= strtotime($tender['tgl_selesai']) ?>">
                                                 <?= $this->indDateFull($tender['tgl_selesai']) ?>
                                             </td>
-                                            <td class="actions">
-                                                <a href="<?= $this->pathFor('beritaTender_detail' , ['id_tender'=>$tender['id_tender']]) ?>" class="btn btn-space btn-primary"><i class="icon icon-left mdi mdi-eye" style="color:#fff;"></i> Detail</a>
+                                            <td class="actions details-expander" data-unit='<?= json_encode($this->getUnitKerja($tender['id_tender'])) ?>' data-dokumen='<?= json_encode($this->getDokumenkelengkapan($tender['id_tender'])) ?>' data-rks='<?= $tender['rks'] ?>'>
+                                                <div class="btn-group btn-space">
+                                                    <button type="button" class="btn btn-default">Detail</button>
+                                                    <button type="button" class="btn btn-default">
+                                                        <i class="icon mdi mdi-caret-down"></i>
+                                                        <i class="icon mdi mdi-caret-up hidden"></i>
+                                                    </button>
+                                                </div>
                                             </td>
                                         </tr>
                                     <?php endforeach;?>
@@ -105,6 +111,7 @@
         <script src="public/assets/lib/moment.js/min/moment-with-locales.min.js" type="text/javascript"></script>
         <script src="public/assets/lib/datetimepicker/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
         <script src="public/assets/lib/datetimepicker/js/locales/bootstrap-datetimepicker.id.js" type="text/javascript" charset="UTF-8"></script>
+        <script src="public/assets/lib/twig/twig.js" type="text/javascript" charset="UTF-8"></script>
         <script type="text/javascript">
             $(document).ready(function(){
                 //initialize the javascript
@@ -204,7 +211,164 @@
                         })
                     }
                 });
+
+                function details_format(data){
+                    var template = Twig.twig({
+                        data: $('#details-expanded').html()
+                    });
+
+                    return template.render({
+                        unit_kerja: data.unit_kerja,
+                        dokumen: data.dokumen,
+                        rks: data.rks,
+                    })
+                }
+
+                $('#table-berita-tender tbody').on('click', 'td.details-expander', function () {
+                    var data = {
+                        unit_kerja: $(this).data('unit'),
+                        dokumen: $(this).data('dokumen'),
+                        rks: $(this).data('rks'),
+                    };
+                    console.log(data.dokumen);
+                    var tr = $(this).closest('tr');
+                    var row = table.row( tr );
+                    if ( row.child.isShown() ) {
+                        // This row is already open - close it
+                        row.child.hide();
+                        tr.removeClass('shown');
+                    }
+                    else {
+                        // Open this row
+                        row.child( details_format(data) ).show();
+                        tr.addClass('shown');
+                    }
+                })
             });
+        </script>
+        <script type="text/html" id="details-expanded">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="panel panel-flat">
+                        <div class="panel-heading">Penugasan Unit Kerja</div>
+                        <div class="panel-body">
+                            <table id="table-berita-tender" class="table" style="background: #fff !important;">
+                                <thead>
+                                    <tr>
+                                        <th class="actions"></th>
+                                        <th>Unit Kerja</th>
+                                        <th>Penugasan</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for unit in unit_kerja %}
+                                    <tr>
+                                        <td class="actions">{{ loop.index }}</td>
+                                        <td class="user-avatar">
+                                            <img src="public/profile/{{ unit.user.image }}" alt="Avatar">
+                                            {{ unit.user.nama }}
+                                        </td>
+                                        <td>{{ unit.penugasan }}</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="panel panel-flat">
+                        <div class="panel-heading">Dokumen Kelengkapan</div>
+                        <div class="panel-body">
+                            <table id="table-berita-tender" class="table" style="background: #fff !important;">
+                                <thead>
+                                    <tr>
+                                        <th class="actions"></th>
+                                        <th style="width:60%;">Nama Dokumen</th>
+                                        <th style="width:40%;">Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="actions">1</td>
+                                        <td class="cell-detail">
+                                            <span>RKS</span>
+                                            <span class="cell-detail-description">Dokumen Tender</span>
+                                        </td>
+                                        <td class="milestone">
+                                            <span class="version">
+                                                {% if not rks %}
+                                                    Menuggu Upload
+                                                {% elseif rks.approval.direktur.status == '' and rks.approval.manajer.status == '' %}
+                                                    Menuggu Approval
+                                                {% elseif rks.approval.direktur.status == '' %}
+                                                    Menuggu Approval Direktur
+                                                {% elseif rks.approval.manajer.status == '' %}
+                                                    Menuggu Approval Manajer
+                                                {% else %}
+                                                    Selesai
+                                                {% endif %}
+                                            </span>
+                                            <div class="progress">
+                                                {% set progress = 1 %}
+                                                {% if rks %}
+                                                    {% set progress = progress + 33 %}
+                                                    {% if rks.approval and rks.approval.direktur.status != '' %}
+                                                        {% set progress = progress + 33 %}
+                                                    {% endif %}
+                                                    {% if rks.approval and rks.approval.manajer.status != '' %}
+                                                        {% set progress = progress + 33 %}
+                                                    {% endif %}
+                                                {% endif %}
+                                                <div style="width:{{progress}}%" class="progress-bar progress-bar-primary"></div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    {% for dok in dokumen %}
+                                    <tr>
+                                        <td class="actions">{{ loop.index + 1 }}</td>
+                                        <td class="cell-detail">
+                                            <span>{{ dok.nama_dokumen }}</span>
+                                            {% if dok.dokumen_syarat == 0 %}
+                                                <span class="cell-detail-description">Dokumen Tambahan</span>
+                                            {% endif %}
+                                        </td>
+                                        <td class="milestone">
+                                            <span class="version">
+                                                {% if not dok.file_dokumen %}
+                                                    Menuggu Upload
+                                                {% elseif dok.approval.direktur.status == '' and dok.approval.manajer.status == '' %}
+                                                    Menuggu Approval
+                                                {% elseif dok.approval.direktur.status == '' %}
+                                                    Menuggu Approval Direktur
+                                                {% elseif dok.approval.manajer.status == '' %}
+                                                    Menuggu Approval Manajer
+                                                {% else %}
+                                                    Selesai
+                                                {% endif %}
+                                            </span>
+                                            <div class="progress">
+                                                {% set progress = 1 %}
+                                                {% if dok.file_dokumen %}
+                                                    {% set progress = progress + 33 %}
+                                                    {% if dok.approval and dok.approval.direktur.status != '' %}
+                                                        {% set progress = progress + 33 %}
+                                                    {% endif %}
+                                                    {% if dok.approval and dok.approval.manajer.status != '' %}
+                                                        {% set progress = progress + 33 %}
+                                                    {% endif %}
+                                                {% endif %}
+                                                <div style="width:{{progress}}%" class="progress-bar progress-bar-primary"></div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </script>
     </body>
 </html>
