--- a/app/views/history/a_rks.phtml
+++ b/app/views/history/a_rks.phtml
@@ -1,20 +1,27 @@
 <li class="timeline-item right"  data-category="tender" data-type="add">
-    <div class="timeline-content timeline-type" style="padding: 10px 10px 10px 10px; border-left: 1px solid #4285f4;">
+    <div class="timeline-content timeline-type" style="padding: 10px 10px 10px 10px; border-left: 1px solid #34a853;">
         <div class="timeline-avatar">
             <img src="public/profile/<?= $this->userDetailHelper($history['id_user'])['image'] ?>" alt="Avatar" class="circle">
         </div>
         <div class="timeline-header">
             <span class="timeline-autor"><?= $this->userDetailHelper($history['id_user'])['nama'] ?></span>
             <p class="timeline-activity" >
-                Menambahkan Berita Tender
+                Melakukan approval RKS dari berita tender
                 <a href="<?= $this->pathFor('beritaTender_detail', ['id_tender'=>$history['id_tender']]) ?>">
                     <?= substr($history['detail']['judul_tender'],0, 50) ?>
                 </a>
             </p>
             <span class="timeline-time"><?= $this->indDateTime($history['waktu']) ?></span>
         </div>
+        <div class="timeline-summary">
+            <div class="btn-group btn-group-xs btn-space">
+                <?php if($history['meta'] == 'diterima'): ?>
+                <button type="button" class="btn btn-success"><i class="icon mdi mdi-check-circle"></i></button>
+                <?php else: ?>
+                <button type="button" class="btn btn-danger"><i class="icon mdi mdi-close-circle-o"></i></button>
+                <?php endif; ?>
+                <button type="button" class="btn btn-default"><?= ucfirst($history['meta']) ?></button>
+            </div>
+        </div>
     </div>
 </li>
-<!--<div class="timeline-summary">-->
-<!--    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus sit amet tellus vel leo posuere fames commodo in eget ante. Vivamus vehicula sed velit at pulvinar.  </p>-->
-<!--</div>-->
