--- a/app/views/sidebar.phtml
+++ b/app/views/sidebar.phtml
@@ -115,6 +115,60 @@
                                                 <?php case 'e_tender': ?>
                                                     <?= $this->insert('history/e_tender', ['history'=>$history]) ?>
                                                     <?php break ?>
+                                                <?php case 'a_tender': ?>
+                                                    <?= $this->insert('history/a_tender', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'd_tender': ?>
+                                                    <?= $this->insert('history/d_tender', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'i_rks': ?>
+                                                    <?= $this->insert('history/i_rks', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'e_rks': ?>
+                                                    <?= $this->insert('history/e_rks', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'a_rks': ?>
+                                                    <?= $this->insert('history/a_rks', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'i_acara': ?>
+                                                    <?= $this->insert('history/i_acara', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'e_acara': ?>
+                                                    <?= $this->insert('history/e_acara', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'i_unit': ?>
+                                                    <?= $this->insert('history/i_unit', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'd_unit': ?>
+                                                    <?= $this->insert('history/d_unit', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'i_dok': ?>
+                                                    <?= $this->insert('history/i_dok', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'u_dok': ?>
+                                                    <?= $this->insert('history/u_dok', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'e_dok': ?>
+                                                    <?= $this->insert('history/e_dok', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'd_dok': ?>
+                                                    <?= $this->insert('history/d_dok', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'a_dok': ?>
+                                                    <?= $this->insert('history/a_dok', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'i_boq': ?>
+                                                    <?= $this->insert('history/i_boq', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'e_boq': ?>
+                                                    <?= $this->insert('history/e_boq', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'd_boq': ?>
+                                                    <?= $this->insert('history/d_boq', ['history'=>$history]) ?>
+                                                    <?php break ?>
+                                                <?php case 'a_boq': ?>
+                                                    <?= $this->insert('history/a_boq', ['history'=>$history]) ?>
+                                                    <?php break ?>
                                                 <?php endswitch; ?>
                                         <?php endforeach; ?>
                                     </ul>
