--- a/app/views/history/e_dok.phtml
+++ b/app/views/history/e_dok.phtml
@@ -1,20 +1,25 @@
 <li class="timeline-item right"  data-category="tender" data-type="add">
-    <div class="timeline-content timeline-type" style="padding: 10px 10px 10px 10px; border-left: 1px solid #4285f4;">
+    <div class="timeline-content timeline-type" style="padding: 10px 10px 10px 10px; border-left: 1px solid #fbbc05;">
         <div class="timeline-avatar">
             <img src="public/profile/<?= $this->userDetailHelper($history['id_user'])['image'] ?>" alt="Avatar" class="circle">
         </div>
         <div class="timeline-header">
             <span class="timeline-autor"><?= $this->userDetailHelper($history['id_user'])['nama'] ?></span>
             <p class="timeline-activity" >
-                Menambahkan Berita Tender
+                Mengganti dokumen dari Berita Tender
                 <a href="<?= $this->pathFor('beritaTender_detail', ['id_tender'=>$history['id_tender']]) ?>">
                     <?= substr($history['detail']['judul_tender'],0, 50) ?>
                 </a>
             </p>
             <span class="timeline-time"><?= $this->indDateTime($history['waktu']) ?></span>
         </div>
+        <div class="timeline-summary">
+            <table class="table">
+                <tr>
+                    <td width="50%"><?= $history['extra']['nama_dokumen'] ?></td>
+                    <td width="50%"><a disabled=""><?= $history['extra']['file_dokumen'] ?></a></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </li>
-<!--<div class="timeline-summary">-->
-<!--    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus sit amet tellus vel leo posuere fames commodo in eget ante. Vivamus vehicula sed velit at pulvinar.  </p>-->
-<!--</div>-->
