--- a/app/views/history/i_dok.phtml
+++ b/app/views/history/i_dok.phtml
@@ -6,15 +6,15 @@
         <div class="timeline-header">
             <span class="timeline-autor"><?= $this->userDetailHelper($history['id_user'])['nama'] ?></span>
             <p class="timeline-activity" >
-                Menambahkan Berita Tender
+                Menambahkan dokumen Untuk Berita Tender
                 <a href="<?= $this->pathFor('beritaTender_detail', ['id_tender'=>$history['id_tender']]) ?>">
                     <?= substr($history['detail']['judul_tender'],0, 50) ?>
                 </a>
             </p>
             <span class="timeline-time"><?= $this->indDateTime($history['waktu']) ?></span>
         </div>
+        <div class="timeline-summary">
+            <a><?= $history['extra']['nama_dokumen'] ?></a>
+        </div>
     </div>
 </li>
-<!--<div class="timeline-summary">-->
-<!--    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus sit amet tellus vel leo posuere fames commodo in eget ante. Vivamus vehicula sed velit at pulvinar.  </p>-->
-<!--</div>-->
