--- a/app/views/history/i_unit.phtml
+++ b/app/views/history/i_unit.phtml
@@ -6,15 +6,31 @@
         <div class="timeline-header">
             <span class="timeline-autor"><?= $this->userDetailHelper($history['id_user'])['nama'] ?></span>
             <p class="timeline-activity" >
-                Menambahkan Berita Tender
+                Menambahakan Unit Kerja untuk berita tender
                 <a href="<?= $this->pathFor('beritaTender_detail', ['id_tender'=>$history['id_tender']]) ?>">
                     <?= substr($history['detail']['judul_tender'],0, 50) ?>
                 </a>
             </p>
             <span class="timeline-time"><?= $this->indDateTime($history['waktu']) ?></span>
         </div>
+        <div class="timeline-summary">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <td>Nama</td>
+                        <td>Penugasan</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="user-avatar">
+                            <img src="public/profile/<?= $this->userDetailHelper($history['extra']['id_user'])['image'] ?>" alt="Avatar">
+                            <?= $this->userDetailHelper($history['extra']['id_user'])['nama'] ?>
+                        </td>
+                        <td><?= $history['extra']['penugasan'] ?></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </li>
-<!--<div class="timeline-summary">-->
-<!--    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus sit amet tellus vel leo posuere fames commodo in eget ante. Vivamus vehicula sed velit at pulvinar.  </p>-->
-<!--</div>-->
